UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Volume_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Volume Histories</relationshipLabel>
        <relationshipName>Sync_to_100_Analysis_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item Id</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Volume Histories</relationshipLabel>
        <relationshipName>Sync_to_100_Analysis_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Full_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Full Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Id</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Volume Histories</relationshipLabel>
        <relationshipName>Sync_to_100_Analysis_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Volume Histories</relationshipLabel>
        <relationshipName>Sync_to_100_Analysis_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volume_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Proposed_Units__c</fullName>
        <label>Total Proposed Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volume History</label>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>